--- a/simple.html
+++ b/simple.html
@@ -7,6 +7,8 @@
 		body {
 			padding-top: 60px;
 			padding-bottom: 20px;
+                  color: blue;
+
 		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
