--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@
 		body {
 			padding-top: 60px;
 			padding-bottom: 20px;
-                  color: blue;
+                  color: green;
 
 		}
 	</style>
