--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,5 @@
 <!-- this is a comment added to the file -->
+<!--Hi there I am learning how to resolve the merge conflict. your bad luck try again  -->
 <!DOCTYPE html>
 <head>
 	<title></title>
