adding changes after rebase

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!-- this is a comment added to the file -->
 <!--Learning merging conflict before rebase scenario>
+<!--Now another changes in the feature branch>
 <!--Hi there I am learning how to resolve the merge conflict. your bad luck try again  -->
 <!DOCTYPE html>
 <head>
