--- a/simple.html
+++ b/simple.html
@@ -28,7 +28,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git Company 2014</p>
 	</footer>
 </body>
 </html>
