Adding another change in simple.html after stashing

--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content adding here as the part of new commit
 		</p>
 	</main>
 	<footer class="container">
