adding chanegssss for stash example

--- a/simple.html
+++ b/simple.html
@@ -7,13 +7,13 @@
 <!--Hi there I am learning how to resolve the merge conflict. your bad luck try again  -->
 <!DOCTYPE html>
 <head>
-	<title></title>
+	<title>Title added for Stash Example </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
 			padding-top: 70px;
 			padding-bottom: 20px;
-                  color: green;
+                  color: blue;
                   font-size: 2px;
 
 		}
@@ -24,7 +24,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content adding here as the part of new commit
+			Just some content adding here as the part of new commit... Okay allchanges are done now.
 		</p>
 	</main>
 	<footer class="container">
