--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,10 @@
 <!--Learning merging conflict before rebase scenario>
 <!--Now another changes in the feature branch>
 
+
 <this is the another change i am making in the master hey there how are you? >
+
+<this is the another change i am making in the master Adding one more change for stashing example--- >
 
 <!--Hi there I am learning how to resolve the merge conflict. your bad luck try again  -->
 <!DOCTYPE html>
