adding stashed files to branch
Adding readme.md file in commit 1

Adding humans.txt in commit 2

Adding simple.html in commit 3

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!-- this is a comment added to the file -->
 <!--Learning merging conflict before rebase scenario>
 <!--Now another changes in the feature branch>
+<New commit for squashing-->
 
 
 <this is the another change i am making in the master hey there how are you? >
