Updating for Release 1.2

--- a/simple.html
+++ b/simple.html
@@ -3,6 +3,8 @@
 <!--Now another changes in the feature branch>
 <New commit for squashing-->
 
+<Adding change in Tag for relaease 1.1>
+
 
 <this is the another change i am making in the master hey there how are you? >
 
